# template-python-project

./: .gitignore  404.html  README.md  extract.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: consolidate_file.xlsx  output.xlsx
docs/: index.md
search/: search_index.json
test/: test_load.py  test_pipeline.py
