[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "template project"
authors = ["Phillipe Santos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.1.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
